--- a/index.html
+++ b/index.html
@@ -37,6 +37,62 @@
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
       </div>
+      <div>
+        <div id="hour-10"  class="row time-block"> 
+          <div class="col-md-1 hour">10AM</div>
+          <textarea class="col-md-10 form-control description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+      <div>
+        <div id="hour-11"  class="row time-block"> 
+          <div class="col-md-1 hour">11AM</div>
+          <textarea class="col-md-10 form-control description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+      <div>
+        <div id="hour-12"  class="row time-block"> 
+          <div class="col-md-1 hour">12AM</div>
+          <textarea class="col-md-10 form-control description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+      <div>
+        <div id="hour-01"  class="row time-block"> 
+          <div class="col-md-1 hour">01AM</div>
+          <textarea class="col-md-10 form-control description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+      <div>
+        <div id="hour-02"  class="row time-block"> 
+          <div class="col-md-1 hour">02AM</div>
+          <textarea class="col-md-10 form-control description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+      <div>
+        <div id="hour-03"  class="row time-block"> 
+          <div class="col-md-1 hour">03AM</div>
+          <textarea class="col-md-10 form-control description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+      <div>
+        <div id="hour-04"  class="row time-block"> 
+          <div class="col-md-1 hour">04AM</div>
+          <textarea class="col-md-10 form-control description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
+      <div>
+        <div id="hour-05"  class="row time-block"> 
+          <div class="col-md-1 hour">05AM</div>
+          <textarea class="col-md-10 form-control description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
