finished last bug

--- a/index.html
+++ b/index.html
@@ -31,66 +31,84 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div>
-        <div id="hour-09"  class="row time-block"> 
+        <div id="hour-09" class="row time-block">
           <div class="col-md-1 hour">9AM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
       <div>
-        <div id="hour-10"  class="row time-block"> 
+        <div id="hour-10" class="row time-block">
           <div class="col-md-1 hour">10AM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
       <div>
-        <div id="hour-11"  class="row time-block"> 
+        <div id="hour-11" class="row time-block">
           <div class="col-md-1 hour">11AM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
       <div>
-        <div id="hour-12"  class="row time-block"> 
-          <div class="col-md-1 hour">12AM</div>
+        <div id="hour-12" class="row time-block">
+          <div class="col-md-1 hour">12PM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
       <div>
-        <div id="hour-01"  class="row time-block"> 
-          <div class="col-md-1 hour">01AM</div>
+        <div id="hour-01" class="row time-block">
+          <div class="col-md-1 hour">1PM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
       <div>
-        <div id="hour-02"  class="row time-block"> 
-          <div class="col-md-1 hour">02AM</div>
+        <div id="hour-02" class="row time-block">
+          <div class="col-md-1 hour">02PM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
       <div>
-        <div id="hour-03"  class="row time-block"> 
-          <div class="col-md-1 hour">03AM</div>
+        <div id="hour-03" class="row time-block">
+          <div class="col-md-1 hour">03PM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
       <div>
-        <div id="hour-04"  class="row time-block"> 
-          <div class="col-md-1 hour">04AM</div>
+        <div id="hour-04" class="row time-block">
+          <div class="col-md-1 hour">04PM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
       <div>
-        <div id="hour-05"  class="row time-block"> 
-          <div class="col-md-1 hour">05AM</div>
+        <div id="hour-05" class="row time-block">
+          <div class="col-md-1 hour">05PM</div>
           <textarea class="col-md-10 form-control description"></textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
     </div>
